--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,8 @@ version = "0.0.1"
 authors = [
     {name = "Tom Nicholas", email = "tomnicholas1@googlemail.com"}
 ]
+url = "https://github.com/xarray-contrib/cubed-xarray/"
+download_url = "https://github.com/xarray-contrib/cubed-xarray/archive/refs/tags/v0.0.1.tar.gz"
 description = "Interface for using cubed with xarray for parallel computation."
 license = {text = "Apache-2"}
 readme = "README.md"
