--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,10 +21,21 @@ classifiers = [
 ]
 requires-python = ">=3.9"
 dependencies = [
-    "numpy >= 1.17",
+    "numpy >= 1.17.1",
     "xarray >= 2024.02.0",
     "cubed >= 0.14.2",
 ]
+
+
+
+[project.optional-dependencies]
+test = [
+    "pre-commit",
+    "ruff",
+    "pytest-mypy",
+    "pytest-cov",
+    "pytest"]
+
 
 [project.urls]
 homepage = "https://github.com/xarray-contrib/cubed-xarray"
@@ -50,9 +61,47 @@ fallback_version = "999"
 [tool.pytest.ini_options]
 junit_family = "xunit2"
 
-[tool.isort]
-profile = "black"
-skip_gitignore = "true"
-force_to_top = "true"
-default_section = "THIRDPARTY"
-known_first_party = "cubed_xarray"
+
+[mypy]
+files = "cubed_xarray/**/*.py"
+show_error_codes = true
+
+[tool.ruff]
+# Same as Black.
+line-length = 88
+indent-width = 4
+target-version = "py39"
+
+exclude = [
+    "docs",
+    ".eggs"]
+
+[tool.ruff.lint]
+# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
+# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
+# McCabe complexity (`C901`) by default.
+select = ["E4", "E7", "E9", "F", "I"]
+per-file-ignores = {}
+
+# E402: module level import not at top of file
+# E731: do not assign a lambda expression, use a def
+# W503: line break before binary operator - not implimeted by ruff due to conflict with PEP8.
+
+ignore = ["E402", "E731"]
+
+# Allow fix for all enabled rules (when `--fix`) is provided.
+fixable = ["ALL"]
+unfixable = []
+
+[tool.ruff.format]
+# Like Black, use double quotes for strings.
+quote-style = "double"
+# Indent with spaces, rather than tabs.
+indent-style = "space"
+# Respect magic trailing commas.
+skip-magic-trailing-comma = false
+# Automatically detect the appropriate line ending.
+line-ending = "auto"
+
+[tool.ruff.lint.isort]
+known-first-party = ["cubed_xarray"]
